--- a/app/src/main/res/layout/app_head.xml
+++ b/app/src/main/res/layout/app_head.xml
@@ -23,4 +23,12 @@
         android:layout_marginLeft="40dp"
         android:src="@drawable/ic_close"
         tools:ignore="ContentDescription"/>
+
+    <ImageView
+        android:id="@+id/open_btn"
+        android:layout_width="26dp"
+        android:layout_height="26dp"
+        android:layout_marginRight="40dp"
+        android:src="@drawable/ic_circle_check"
+        tools:ignore="ContentDescription"/>
 </RelativeLayout>
